<resources>
    <string name="app_name"></string>
    <string name="pick_date">Select date</string>
    <string name="BreakfastSelection">Breakfast</string>
    <string name="LunchSelection">Lunch</string>
    <string name="DinnerSelection">Dinner</string>
    <string name="SnacksSelection">Snack</string>
    <string name="SearchFood">Search Food</string>
    <string name="SearchQuantity">quantity</string>
    <string name="SearchMeasure">measure</string>
    <string name="search">Search</string>
</resources>
